@startuml
class main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.CarPool {
- int carCount
- {static} CarPool pool
- List<Car> available
- List<Car> inUse
- void initCarPool()
+ {static} CarPool getCarPool()
+ Car getCar()
+ void releaseCar(Car)
+ String toString()
}
class main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Tenant {
- Integer id
+ void run()
- Car rentACar()
- void returnACar(Car)
}
class main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Car {
- Integer id
- Integer rentedBy
- Integer returnedBy
- Date rentDate
- Date returnDate
- List<Integer> listOfTenants
+ int getRentedBy()
+ void setRentedBy(int)
+ int getReturnedBy()
+ void setReturnedBy(int)
+ Date getRentDate()
+ void setRentDate(Date)
+ Date getReturnDate()
+ void setReturnDate(Date)
+ String toString()
+ List<Integer> getListOfTenants()
+ void setListOfTenants(List<Integer>)
}

main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.CarPool *- main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Car : have 10

main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Tenant -- main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.CarPool : asks for rentable Car >

main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Tenant -- main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Car :  rents  >

main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Tenant -- main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Car :  returns  >

main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Thread <|-- main.java.com.poyrazaktas.multi_thread_safe_singleton_object_pool_pattern.Tenant
@enduml